ingresses/5-hubmgt/overlays/ingresses/customers/api-ingress-v2.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v2
  namespace: apps
  annotations:
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v2
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/customers/v2`)
      services:
        - name: customer-app-v2
          port: 3000
      middlewares:
        - name: treblle
          namespace: traefik
  tls: {}
