ingresses/5-hubmgt/overlays/ingresses/customers/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: apps
  annotations:
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.localdemo.mageekbox.eu`) && PathPrefix(`/customers`)
      services:
        - name: customer-app
          port: 3000
      middlewares:
        - name: treblle
          namespace: traefik
  tls: {}
